// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingPaymentMethod Shopify should render a button 1`] = `
<div
  class="wrapper"
>
  <h4
    class="header"
  >
    <i
      class="icon material-icons"
    >
      credit_card
    </i>
    Payment method
  </h4>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        id="activate-shopify-billing-button"
        style="display: inline-block;"
      >
        <a
          class=""
          href="/integrations/shopify/billing/activate/"
        >
          <button
            class="wrapper fill primary medium"
            type="button"
          >
            Activate billing with Shopify and pay $12
          </button>
        </a>
        <div
          class="wrapper taxDisclaimer"
        >
          * Prices do not include
           
          <a
            href="https://www.gorgias.com/pricing/billing-sales-tax"
            rel="noopener noreferrer"
            target="_blank"
          >
            sales tax
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BillingPaymentMethod Shopify should render a button to reactivate billing 1`] = `
<div
  class="wrapper"
>
  <h4
    class="header"
  >
    <i
      class="icon material-icons"
    >
      credit_card
    </i>
    Payment method
  </h4>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="content"
      >
        <i
          class="statusIcon material-icons text-warning md-2"
        >
          warning
        </i>
         
        Billing with Shopify is inactive. Please reactivate to avoid account cancellation.
         
        <a
          class="float-right"
          href="/integrations/shopify/billing/activate/"
        >
          <button
            class="wrapper fill primary medium"
            type="button"
          >
            Reactivate billing with Shopify
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`BillingPaymentMethod Shopify should render a disabled button 1`] = `
<div
  class="wrapper"
>
  <h4
    class="header"
  >
    <i
      class="icon material-icons"
    >
      credit_card
    </i>
    Payment method
  </h4>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        id="activate-shopify-billing-button"
        style="display: inline-block;"
      >
        <a
          class="disabledLink"
          href="/integrations/shopify/billing/activate/"
        >
          <button
            class="wrapper fill primary medium isDisabled"
            disabled=""
            type="button"
          >
            Activate billing with Shopify and pay $12
          </button>
        </a>
        <div
          class="wrapper taxDisclaimer"
        >
          * Prices do not include
           
          <a
            href="https://www.gorgias.com/pricing/billing-sales-tax"
            rel="noopener noreferrer"
            target="_blank"
          >
            sales tax
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BillingPaymentMethod Shopify should render an active status 1`] = `
<div
  class="wrapper"
>
  <h4
    class="header"
  >
    <i
      class="icon material-icons"
    >
      credit_card
    </i>
    Payment method
  </h4>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="content"
      >
        <i
          class="statusIcon material-icons text-success md-2"
        >
          check_circle
        </i>
         
        Payment with Shopify is active. You're all set.
      </div>
    </div>
  </div>
</div>
`;

exports[`BillingPaymentMethod Stripe should render a button 1`] = `
<div
  class="wrapper"
>
  <h4
    class="header"
  >
    <i
      class="icon material-icons"
    >
      credit_card
    </i>
    Payment method
  </h4>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="row"
      >
        <div
          class="content col-sm-8"
        >
          No credit card registered
        </div>
        <div
          class="text-right col-sm-4"
        >
          <div
            id="add-payment-method-button"
            style="display: inline-block;"
          >
            <a
              class=""
              to="/app/settings/billing/add-payment-method"
            >
              <button
                class="wrapper fill primary medium"
                type="button"
              >
                Add payment method
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BillingPaymentMethod Stripe should render a button to update a credit card 1`] = `
<div
  class="wrapper"
>
  <h4
    class="header"
  >
    <i
      class="icon material-icons"
    >
      credit_card
    </i>
    Payment method
  </h4>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="row"
      >
        <div
          class="content col-sm-8"
        >
          <span
            class="cardLabel"
          >
            Visa
             ending with
             
            <strong>
              4242
            </strong>
          </span>
        </div>
        <div
          class="text-right col-sm-4"
        >
          <a
            to="/app/settings/billing/change-credit-card"
          >
            <button
              class="wrapper fill secondary medium"
              type="button"
            >
              Change card
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BillingPaymentMethod Stripe should render a disabled button 1`] = `
<div
  class="wrapper"
>
  <h4
    class="header"
  >
    <i
      class="icon material-icons"
    >
      credit_card
    </i>
    Payment method
  </h4>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="row"
      >
        <div
          class="content col-sm-8"
        >
          No credit card registered
        </div>
        <div
          class="text-right col-sm-4"
        >
          <div
            id="add-payment-method-button"
            style="display: inline-block;"
          >
            <a
              class="disabledLink"
              to="/app/settings/billing/add-payment-method"
            >
              <button
                class="wrapper fill primary medium isDisabled"
                disabled=""
                type="button"
              >
                Add payment method
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BillingPaymentMethod Stripe should render a loader 1`] = `
<div
  class="container"
>
  <div
    class="inner"
    style="min-height: 500px;"
  >
    <i
      class="icon-custom icon-circle-o-notch md-spin"
      style="font-size: 40px;"
    />
  </div>
</div>
`;
